cmake_minimum_required(VERSION 3.22)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled
        #        TopologicalSort.cpp
        #                ArrayReverse.cpp
        #        ArrayOutput.cpp
        #        LongestIncreasingSubsequence.cpp
        #        LinkedListItem.cpp
        #        LinkedListMerge.cpp
        #        LinkedListsIntersection.cpp
        #        CaesarCode.cpp
        #        JudgeStack.cpp
        #        LoveYou.cpp
        #        BubbleSort.cpp
        #        InsertSort.cpp
        #        QuickSort.cpp
        #        MergeSort.cpp
        #        ChainCardinalitySort.cpp
        #        ScoreSort.cpp
        #        MergeOrderedArray.cpp
        Tree'sOutput2.cpp)